tests/baselines/reference/stringLiteralsWithSwitchStatements04(strict=true).errors.txt
stringLiteralsWithSwitchStatements04.ts(6,9): error TS2454: Variable 'y' is used before being assigned.
stringLiteralsWithSwitchStatements04.ts(7,10): error TS2695: Left side of comma operator is unused and has no side effects.
stringLiteralsWithSwitchStatements04.ts(7,17): error TS2454: Variable 'x' is used before being assigned.
stringLiteralsWithSwitchStatements04.ts(9,10): error TS2454: Variable 'x' is used before being assigned.
stringLiteralsWithSwitchStatements04.ts(9,10): error TS2695: Left side of comma operator is unused and has no side effects.
stringLiteralsWithSwitchStatements04.ts(11,10): error TS2454: Variable 'x' is used before being assigned.
stringLiteralsWithSwitchStatements04.ts(11,10): error TS2695: Left side of comma operator is unused and has no side effects.
stringLiteralsWithSwitchStatements04.ts(11,10): error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.
stringLiteralsWithSwitchStatements04.ts(13,10): error TS2695: Left side of comma operator is unused and has no side effects.
stringLiteralsWithSwitchStatements04.ts(13,17): error TS2454: Variable 'x' is used before being assigned.
stringLiteralsWithSwitchStatements04.ts(19,10): error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.


==== stringLiteralsWithSwitchStatements04.ts (11 errors) ====
    let x: "foo";
    let y: "foo" | "bar"; 
    
    declare function randBool(): boolean;
    
    switch (y) {
            ~
!!! error TS2454: Variable 'y' is used before being assigned.
        case "foo", x:
             ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                    ~
!!! error TS2454: Variable 'x' is used before being assigned.
            break;
        case x, "foo":
             ~
!!! error TS2454: Variable 'x' is used before being assigned.
             ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
            break;
        case x, "baz":
             ~
!!! error TS2454: Variable 'x' is used before being assigned.
             ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~~~~~~~~
!!! error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.
            break;
        case "baz", x:
             ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                    ~
!!! error TS2454: Variable 'x' is used before being assigned.
            break;
        case "baz" && "bar":
            break;
        case "baz" && ("foo" || "bar"):
            break;
        case "bar" && ("baz" || "bar"):
             ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.
            break;
    }
    